--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,11 @@
-page-home {
+ion-item-group {
+  border-bottom: 1px solid gray;
+}
 
+.item-inner {
+  padding-right: 16px;
+}
+
+#map {
+  height: 100%;
 }
