--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,46 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+@mixin box-shadow($shadow1, $shadow2: null) {
+    -webkit-box-shadow: $shadow1, $shadow2;
+    -moz-box-shadow: $shadow1, $shadow2;
+    -ms-box-shadow: $shadow1, $shadow2;
+    box-shadow: $shadow1, $shadow2;
+}
+
+@mixin transform($transform) {
+    -moz-transform: $transform;
+    -o-transform: $transform;
+    -ms-transform: $transform;
+    -webkit-transform: $transform;
+    transform: $transform;
+}
+
+@mixin transition($transition1, $transition2: null) {
+    -webkit-transition: $transition1, $transition2;
+    -moz-transition: $transition1, $transition2;
+    -o-transition: $transition1, $transition2;
+    -ms-transition: $transition1, $transition2;
+    transition: $transition1, $transition2;
+}
+
+@mixin background() {
+    overflow: auto;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+@mixin rotate($rotate) {
+    -webkit-transform: rotate($rotate);
+    -ms-transform: rotate($rotate);
+    -moz-transform: rotate($rotate);
+    transform: rotate($rotate);
+}
+
