--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,12 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,600i');
+
+* {
+    font-family: Libre Franklin, sans-serif;
+}
+
 
 @mixin box-shadow($shadow1, $shadow2: null) {
     -webkit-box-shadow: $shadow1, $shadow2;
