--- a/src/pages/search-filters/search-filters.scss
+++ b/src/pages/search-filters/search-filters.scss
@@ -1,11 +1,15 @@
 * {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 ion-item-group {
   border-bottom: 1px solid gray;
 }
 
+#map {
+  width: 100%;
+  height: 125px;
+}
 
 .item-inner {
   ion-icon.arrow {
