--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #4da9ff,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f2f2f2,
