--- a/src/pages/pet-list/pet-list.scss
+++ b/src/pages/pet-list/pet-list.scss
@@ -56,17 +56,17 @@ ion-list {
       left: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle, #fff 0%, #ffb3cc 100%);
+      background: radial-gradient(circle, transparent 0%, #ffb3cc 100%);
       border-radius: 100%;
       opacity: 0;
   }
   &:before {
       transform: scale(1);
-      -webkit-animation: pulse 1.5s 1 linear;
-      animation: pulse 1.5s 1 linear;
+      -webkit-animation: pulse 2s 1 ease;
+      animation: pulse 2s 1 ease;
   }
   // &:after {
-  //     animation: pulse 1.5s 0.8s 1 linear;
+  //     animation: pulse 2.5s 0.5s 1 ease;
   // }
 }
 @keyframes pulse {
