--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,8 +35,8 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #4da9ff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  secondary:  #98e6e6,
+  red:        #ff6666,
   light:      #f2f2f2,
   dark:       #222,
   gray:       #aeacb4,
