--- a/src/pages/favorite-pets/favorite-pets.scss
+++ b/src/pages/favorite-pets/favorite-pets.scss
@@ -1,9 +1,16 @@
-ion-item ion-thumbnail {
+favorite-pets {
+  ion-item ion-thumbnail {
     width: 70px !important;
     height: 70px !important;
     @include background();
-}
+  }
 
-#back-arrow {
+  #back-arrow {
     font-size: 46px;
+  }
+
+  h5 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
 }
