pet search and model updates

--- a/src/pages/pet-detail/pet-detail.scss
+++ b/src/pages/pet-detail/pet-detail.scss
@@ -16,6 +16,10 @@ pet-detail {
     transition: all 0.3s ease;
   }
 
+  #back-arrow {
+      font-size: 46px;
+  }
+
   ion-slides {
     max-height: 270px;
   }
